# qml-module-zynthbox

./: .gitignore  CMakeLists.txt
controls/: CMakeLists.txt  assets.qrc  theme.cpp  theme.h  zynthbox.cpp  zynthbox.h  zynthbox.qrc
controls/controls/qml/: Button.qml
controls/qml/: ADSRClipView.qml  ADSRControlView.qml  AbstractADSRView.qml  AbstractController.qml  ActionBar.qml  ActionPickerPopup.qml  ActionRow.qml  BasicDelegate.qml  BreadcrumbButton.qml  Button.qml  Card.qml  CellControl.qml  ComboBox.qml  CommonUtils.js  ControllerLoader.qml  DialController.qml  Dialog.qml  DialogQuestion.qml  Drawer.qml  InfinitySlider.qml  LibraryPagePicker.qml  Menu.qml  MultiSelectorPage.qml  MultiSwitchController.qml  NewStuffPage.qml  NotePad.qml  NotePickerPopup.qml  Popup.qml  ResetableSlider.qml  SaveFileDialog.qml  ScreenPage.qml  SectionButton.qml  SectionGroup.qml  SectionPanel.qml  SelectorDelegate.qml  SelectorPage.qml  SelectorView.qml  SketchpadDial.qml  SlotControl.qml  SwitchController.qml  (+3 more)
controls/qml/private/: ActionButton.qml  ButtonBackground.qml  CardBackground.qml  NewStuffPageContents.qml  SelectorViewBackground.qml
mpris2/: CMakeLists.txt  mpris2player.cpp  mpris2player.h  plugin.cpp
mpris2/controls/: PlayersView.qml
recorder/: CMakeLists.txt  main.cpp  plugin.cpp  recorder.cpp  recorder.h
style/: CMakeLists.txt
webmidi/: CMakeLists.txt  CommandRunner.cpp  CommandRunner.h  MidiTransport.cpp  MidiTransport.h  WebView.qml  app.qrc  jzz_webchannel.js  plugin.cpp
xtasks/: CMakeLists.txt  plugin.cpp  windowsmodel.cpp  windowsmodel.h  xtask.cpp  xtask.h
xtasks/controls/: PlayersView.qml
